package mirante.api.exercise.option;

public class OptionDTO {
  public String id;
  public String content;
  public Integer place;
  public Boolean correct;
  public String exercise;
}
