package mirante.api.exercise.set;

public enum Access {
  PRIVATE,
  PUBLIC,
  COURSE,
}
